--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "motion": "^12.16.0",
     "react": "^19.1.0",
@@ -19,7 +23,10 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^4.1.8"
+    "react-tsparticles": "^2.12.2",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^4.1.8",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
