--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tsparticles": "^2.12.2",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.8",
     "tsparticles": "^3.8.1"
